--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="Hmo-fA-biu" id="OyZ-go-B7N"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="yAI-54-R7b"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="yAI-54-R7b">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="7Cv-A4-721">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addItemButtonPressed:" destination="Hmo-fA-biu" id="bRF-Zf-0l8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vef-6B-iCJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
